--- a/.github/workflows/github-actions-deployment.yml
+++ b/.github/workflows/github-actions-deployment.yml
@@ -20,5 +20,5 @@ jobs:
         run: |
           for file in *.yml
           do
-            curl -s -X POST --data-binary "@$file" https://$cluster_api_login:$cluster_api_password@c2.krato.cz/deploy/"${file%.*}"
+            curl --silent --fail-with-body -X POST --data-binary "@$file" https://$cluster_api_login:$cluster_api_password@c2.krato.cz/deploy/"${file%.*}"
           done
