--- a/whoami.yml
+++ b/whoami.yml
@@ -1,4 +1,4 @@
-version: "3.0"
+version: "3.8"
 
 services:
   whoami:
@@ -8,3 +8,5 @@ services:
     deploy:
       mode: replicated
       replicas: 2
+      placement:
+        max_replicas_per_node: 1
